removed stickiness from the header bar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-  <header class="navbar-fixed">
+  <header class="navbar">
   <nav>
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
       <ul class="right hide-on-med-and-down">
