added a couple of pages

--- a/register.html
+++ b/register.html
@@ -21,7 +21,7 @@
 
       <div class="row">
         <form class="col s12">
-          <h6 class='center-align' style='padding: 0px 0px;'>ChatApp</h6>
+          <h6 class='center-align' style='padding: 20px 0px;'>Register New Account</h6>
           <div class="row">
 
             <div class="input-field col s12">
@@ -33,17 +33,13 @@
               <label for="password">Password</label>
             </div>
             <div class="row center">
-              <a id="login-button" class="btn waves-effect waves-light">Login</a>
+              <a id="register-button" class="btn waves-effect waves-light">Register</a>
             </div>
 
           </div>
 
         </form>
       </div>
-      <div class="row center" >
-        <a href="/register.html">New Account</a>
-      </div>
-
 
     </div>
   </div>
