--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
 
+
+    <!-- Scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
+    <script defer src="/src/helpers.js"></script>
+    <script defer src="/src/index.js"></script>
+
+
 </head>
 
 <body class='grey lighten-4'>
