--- a/app.html
+++ b/app.html
@@ -45,7 +45,7 @@
       <div class="row">
         <div class="input-field col s12">
           <p class="range-field">
-            <input type="range" id="test5" min="100" max="5000" />
+            <input type="range" id="distance-range" min="100" max="5000" />
           </p>
         </div>
         <div class="input-field col s12" style="margin-bottom:50px;">
