added more messages functionality

--- a/app.html
+++ b/app.html
@@ -59,7 +59,7 @@
       </div>
     </div>
   </div>
-
+  <main>
   <div class="row message-card" style="margin-top:40px;">
     <div class="col s10 offset-s1 white z-depth-2 m6 offset-m3 l4 offset-l4" style="padding:0px 40px 0px 40px; border-radius: 4px;">
       <div class="row">
@@ -90,6 +90,7 @@
       </div>
     </div>
   </div>
+</main>
 
 
 
