friend filtering now works!

--- a/app.html
+++ b/app.html
@@ -51,7 +51,7 @@
         <div class="input-field col s12" style="margin-bottom:50px;">
           <div class="switch">
             <label>
-             <input type="checkbox">
+             <input type="checkbox" id='friendsOnlyCheckbox'>
              <span class="lever"></span>Show friend's messages only
            </label>
           </div>
