--- a/app.html
+++ b/app.html
@@ -59,8 +59,23 @@
       </div>
     </div>
   </div>
-  <main>
+  <main style='padding-bottom: 150px;'>
   </main>
+  <section style='padding: 10px 0px; position: fixed; bottom: 0px; width:100%' class='grey lighten-4'>
+  <div style='border: 1px solid #009688; margin: 0px 30px; padding-bottom:20px; border-radius: 10px;'>
+    <div class="row" style="height:40px; margin-top:0px;">
+      <div class="col s12 ">
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="teal-text text-darken-2 material-icons prefix">keyboard_arrow_right</i>
+            <input type="text" placeholder="message" class='teal-text text-darken-2' >
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 
 
