added form submission logic

--- a/app.html
+++ b/app.html
@@ -66,10 +66,12 @@
     <div class="row" style="height:40px; margin-top:0px;">
       <div class="col s12 ">
         <div class="row">
+          <form>
           <div class="input-field col s12">
             <i class="teal-text text-darken-2 material-icons prefix">keyboard_arrow_right</i>
-            <input type="text" placeholder="message" class='teal-text text-darken-2' >
+            <input type="text" placeholder="message" class='teal-text text-darken-2' id='message-input' type="submit">
           </div>
+          </form>
         </div>
       </div>
     </div>
