added message transfer with sockets

--- a/app.html
+++ b/app.html
@@ -40,12 +40,12 @@
 
 
 
-  <div class="row" style="height:30px; margin-top:40px;">
+  <div class="row" style="height:30px; margin-top:40px; scroll-behavior: smooth;">
     <div class="col s10 offset-s1 m6 offset-m3 l4 offset-l4" style="padding:0px 40px 0px 40px; border-radius: 4px;">
       <div class="row">
         <div class="input-field col s12">
           <p class="range-field">
-            <input type="range" id="distance-range" min="100" max="5000" />
+            <input type="range" id="distance-range" min="100" max="10000" />
           </p>
         </div>
         <div class="input-field col s12" style="margin-bottom:50px;">
@@ -61,6 +61,7 @@
   </div>
   <main style='padding-bottom: 150px;'>
   </main>
+
   <section style='padding: 10px 0px; position: fixed; bottom: 0px; width:100%' class='grey lighten-4'>
   <div style='border: 1px solid #009688; margin: 0px 30px; padding-bottom:20px; border-radius: 10px;'>
     <div class="row" style="height:40px; margin-top:0px;">
