--- a/app.html
+++ b/app.html
@@ -14,6 +14,7 @@
 
   <!-- Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
+  <script src="/src/location.js"></script>
   <script defer src="/src/helpers.js"></script>
   <script defer src="/src/app.js"></script>
 
