added location feedback

--- a/app.html
+++ b/app.html
@@ -45,6 +45,9 @@
     <div class="col s10 offset-s1 m6 offset-m3 l4 offset-l4" style="padding:0px 40px 0px 40px; border-radius: 4px;">
       <div class="row">
         <div class="input-field col s12">
+          <p class="center-align" id='coordinate-feedback' style='font-size: 12px;'></p>
+        </div>
+        <div class="input-field col s12">
           <p class="range-field">
             <input type="range" id="distance-range" min="100" max="10000" />
           </p>
