--- a/app.html
+++ b/app.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
-  <title>Starter Template - Materialize</title>
+  <title>proximity</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -26,13 +26,13 @@
 <body class='grey lighten-4'>
   <header class="navbar">
     <nav class="teal darken-2">
-      <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">ChatApp</a>
+      <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo" style='font-size:16px;'>proximity</a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#">Navbar Link</a></li>
+          <li><a href="#" class='logout'>Logout</a></li>
         </ul>
 
         <ul id="nav-mobile" class="sidenav">
-          <li><a href="#">Navbar Link</a></li>
+          <li><a href="#" class='logout'>Logout</a></li>
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       </div>
