--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 
       <div class="row">
         <form class="col s12">
-          <h6 class='center-align' style='padding: 0px 0px;'>proximity</h6>
+          <h6 class='center-align teal-text text-darken-2' style='padding: 0px 0px; margin:60px 0px;'>proximity</h6>
           <div class="row">
 
             <div class="input-field col s12">
-              <input id="username" type="text" class="validate">
+              <input id="username" type="text" class="validate teal-text text-darken-2">
               <label for="username">Username</label>
             </div>
             <div class="input-field col s12" style="margin-bottom:50px;">
-              <input id="password" type="password" class="validate">
+              <input id="password" type="password" class="validate teal-text text-darken-2">
               <label for="password">Password</label>
             </div>
             <div class="row center">
