--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
-  <title>proximity</title>
+  <title>proximity - like Yik Yak but worse</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -27,15 +27,15 @@
 
       <div class="row">
         <form class="col s12">
-          <h6 class='center-align' id='register-new-account' style='padding: 20px 0px;'>Register New Account</h6>
+          <h6 class='center-align teal-text text-darken-2' id='register-new-account' style='padding: 20px 0px; margin: 60px 0px;'>Register New Account</h6>
           <div class="row">
 
             <div class="input-field col s12">
-              <input id="username" type="text" class="validate">
+              <input id="username" type="text" class="validate teal-text text-darken-2">
               <label for="username">Username</label>
             </div>
             <div class="input-field col s12" style="margin-bottom:50px;">
-              <input id="password" type="password" class="validate">
+              <input id="password" type="password" class="validate teal-text text-darken-2">
               <label for="password">Password</label>
             </div>
             <div class="row center" id='button-block'>
