added validation errors

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
-  <title>proximity</title>
+  <title>proximity - like Yik Yak but worse</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -29,7 +29,7 @@
 
       <div class="row">
         <form class="col s12">
-          <h6 class='center-align teal-text text-darken-2' style='padding: 0px 0px; margin:60px 0px;'>proximity</h6>
+          <h6 class='center-align teal-text text-darken-2' style='padding: 0px 0px; margin:60px 0px;' id='logo-text'>proximity</h6>
           <div class="row">
 
             <div class="input-field col s12">
